WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131866
[GTK] Builtin cursors do not properly handle transparency
https://bugs.webkit.org/show_bug.cgi?id=131866
Summary
[GTK] Builtin cursors do not properly handle transparency
Martin Robinson
Reported
2014-04-18 17:04:40 PDT
When displaying cursors that are shipped with the WebKit source code, transparency is not properly displayed. The white parts of the cursor image are interpreted as transparent pixels. To observe this problem, go to
http://leafletjs.com/
and observe the cursor used over the map or load ManualTests/cursor.html and hover over "grab."
Attachments
Patch
(2.53 KB, patch)
2014-04-18 17:24 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2014-04-18 17:24:14 PDT
Created
attachment 229688
[details]
Patch
Martin Robinson
Comment 2
2014-04-28 08:19:26 PDT
Comment on
attachment 229688
[details]
Patch Clearing flags on attachment: 229688 Committed
r167887
: <
http://trac.webkit.org/changeset/167887
>
Martin Robinson
Comment 3
2014-04-28 08:19:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug