[GTK] Builtin cursors do not properly handle transparency https://bugs.webkit.org/show_bug.cgi?id=131866

Reviewed by Gustavo Noronha Silva.

Tested by ManualTests/cursor.html.

* platform/gtk/CursorGtk.cpp:
(WebCore::createNamedCursor): Instead of interpreting the source bitmap as an A1 image, use
it as a 1-bit black and white image. We do this by:
    1. Painting the result to a full color image with transparency instead of an alpha-only surface.
    2. Masking a white background using the cursor alpha surface.
    3. Painting the black parts of the cursor by painting the source surface, where black pixels
    will be interpreted as full opaque pixels.

Canonical link: https://commits.webkit.org/150296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167887 268f45cc-cd09-0410-ab3c-d52691b4dbfc